--- a/src/index.scss
+++ b/src/index.scss
@@ -12,6 +12,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-size: 20px;
+  background-color: rgb(217, 218, 221);
 }
 
 ol,
@@ -74,16 +75,6 @@ a {
   display: flex;
   justify-content: space-between;
   left: 10px;
-  a {
-    margin: 10px;
-    display: block;
-    padding: 10px 50px;
-    font-weight: bold;
-    color: #fff;
-    text-align: center;
-    border-radius: 10px;
-    background-color: dodgerblue;
-  }
 }
 
 table {
@@ -112,6 +103,19 @@ table {
   }
 }
 
+.off td {
+  background: rgb(95, 95, 95);
+  color: #ccc;
+
+  .de1 {
+    opacity: 0.3;
+  }
+}
+
+.btn_del {
+  background-color: firebrick;
+}
+
 .de1 {
   display: flex;
   justify-content: space-around;
@@ -122,32 +126,40 @@ table {
   font-size: 10px;
 }
 
-.off td {
-  background: #eee;
-  color: #ccc;
-  .de1 {
-    opacity: 0.3;
-  }
+.btn {
+  height: 35px;
+  display: block;
+  font-size: 11px;
+  margin: 15px auto;
+
+  text-align: center;
+  cursor: pointer;
+  color: rgb(179, 171, 171);
+  transition: all 0.9s, color 0.3;
 }
 
-.btn_del {
-  margin-left: 10px;
+.btn:hover {
   color: #fff;
-  background-color: firebrick;
 }
 
+.hover3:hover {
+  box-shadow: 0 80px 0 0 rgba(0, 0, 0, 0.25) inset,
+    0 -80px 0 0 rgba(0, 0, 0, 0.25) inset;
+}
 .prevAndNext {
+  width: 500px;
+  margin-left: 150px;
   @include flex();
 }
 .prevAndNext h2 {
-  margin: 30px;
+  margin: 20px;
   font-size: 50px;
 }
 
 button {
   padding: 10px;
-  font-weight: bold;
-  font-size: 18px;
+  font-weight: 700;
+  font-size: 20px;
   cursor: pointer;
   border: 0 none;
   border-radius: 6px;
